sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:15: error: ';' expected but 'else' found.
				else {echange(0,1)
                                ^AlgGnomeSort:20: error: ';' expected but 'else' found.
		else {
                ^