sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
	var trie = false
	var i = 0
	while (!trie) {
		if (i==0) {
			i = 1
		}
		else {
			if (i==1) {
				if (plusPetit(0,1)) {
					if (plusPetit(1,2)) {i=2}
					else {echange(1,2)
						i = 1}
				else {echange(0,1)
					i = 1}
				}
			}
		}
		else {
			if (plusPetit(i-1,i)) {
				if (plusPetit(i,i+1)) {
					i = i+1
				}
				else {echange(i,i+1)
					i = i-1
				}
			}
		}
	}
}
